# expense-agent-workflow

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  compose.dev.yaml  compose.yaml  deploy_cloudrun.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.kiro/agents/: expense-agent.json
.kiro/hooks/: lint-and-format.sh
docker/: dev.Dockerfile  prod.Dockerfile
gas/: README.md  form_trigger.gs
src/: config.py  main.py  schemas.py
src/agents/: expense_checker.py  router.py  rule_finder.py
src/services/: drive.py  sheets.py
src/static/: index.html
terraform/: README.md  cloud_run.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_config.py  test_drive.py  test_expense_checker.py  test_main.py  test_router.py  test_rule_finder.py  test_schemas.py  test_sheets.py
