[project]
name = "expense-agent-workflow"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",    # assert used (useful in tests)
    "RUF001",  # ambiguous unicode (Japanese fullwidth chars)
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
    "E501",    # line too long (handled by formatter; allows
               # long strings, URLs, Japanese text per Google
               # Style Guide exceptions)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
